--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <link
-        href="index.css"
+        href="about.css"
         rel="stylesheet"
     />
+
 </head>
 
 <body>
@@ -57,19 +58,32 @@
         </div>
 
     </nav>
-    <div class="box">
-        <div style="position:relative">
-            <img
-                src="主页大图透明底.png"
-                width="960px"
-            />
-            <p>
-                <input
-                    type="button"
-                    onclick='location.href=("website2.html")'
-                    style="position:absolute;left: 510px;top:265px"
-                />
-            </p>
-        </div>
+
+    <div id="content">
+        <img src="./Image/About1.jpeg">
     </div>
+
+    <div class="link">
+        <a href="mailto:bagegoo@126.com">
+            <img
+                src="./Image/Mail.jpg"
+                alt="Mail Icon"
+            >
+        </a>
+
+        </a>
+        <a href="https://www.instagram.com/bagegoo/">
+            <img
+                src="./Image/Ins.jpg"
+                alt="Instagram Icon"
+            >
+        </a>
+        <a href="https://bagegoo.com">
+            <img
+                src="./Image/Dog.jpg"
+                alt="Website Icon"
+            >
+        </a>
+    </div>
+
 </body>
