Connected to a form service

--- a/website2.html
+++ b/website2.html
@@ -13,8 +13,8 @@
 <body>
     <div class="input1 ">
         <form
+            action="https://formsubmit.co/bytedance@duck.com"
             method="POST"
-            action="https://formsubmit.co/6f5fbc7579aa942bc3ef3fdf0386cfb9"
             enctype="multipart/form-data"
         >
             <div style="position:relative;">
@@ -24,7 +24,7 @@
                 />
 
                 <!-- 抓取ip -->
-                <p0>
+                <!-- <p0>
                     <input
                         type="text"
                         id="ip"
@@ -32,7 +32,7 @@
                         required=""
                         style="position:absolute; left:350px;top:110px;"
                     />
-                </p0>
+                </p0> -->
 
                 <!-- topic输入提示 -->
                 <!-- <p>
@@ -101,7 +101,7 @@
                 <input
                     type="hidden"
                     name="_next"
-                    value="https://www.christmastreebyebye.com/website3.html"
+                    value="website3.html"
                 >
 
 
