Added an alternative URL

--- a/website2.html
+++ b/website2.html
@@ -101,7 +101,7 @@
                 <input
                     type="hidden"
                     name="_next"
-                    value="website3.html"
+                    value="https://jessejixin.github.io/website3.html"
                 >
 
 
