--- a/website2.html
+++ b/website2.html
@@ -12,11 +12,7 @@
 
 <body>
     <div class="input1 ">
-        <form
-            action="https://formsubmit.co/bytedance@duck.com"
-            method="POST"
-            enctype="multipart/form-data"
-        >
+        <form action="https://formsubmit.co/bytedance@duck.com"method="POST">
             <div style="position:relative;">
                 <img
                     src="./Image/website2.png"
