--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <title> Days of being cared for by a bed </title>
     <link
         href="index.css"
         rel="stylesheet"
