--- a/cemetery.html
+++ b/cemetery.html
@@ -128,7 +128,7 @@
                 class="TreeH"
                 src="./CemeteryImage/Tree1/Tree1Real.jpeg"
             />
-            <span>Sorry I didn't take care of you very well :( You dry really fast, but you made me very very happy</span>
+            <span>I REALLY MISS U, XTN!</span>
         </div>
         <div
             class="hiddenInfoB"
