--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             >
             <input
                 type="button"
-                onclick='location.href=("cemetery.html")'
+                onclick='location.href=("archive.html")'
             />
         </div>
 
@@ -64,7 +64,7 @@
     </div>
 
     <div class="link">
-        <a href="mailto:bagegoo@126.com">
+        <a href="mailto:">
             <img
                 src="./Image/Mail.jpg"
                 alt="Mail Icon"
@@ -72,13 +72,13 @@
         </a>
 
         </a>
-        <a href="https://www.instagram.com/bagegoo/">
+        <a href="https://www.instagram.com/">
             <img
                 src="./Image/Ins.jpg"
                 alt="Instagram Icon"
             >
         </a>
-        <a href="https://bagegoo.com">
+        <a href="">
             <img
                 src="./Image/Dog.jpg"
                 alt="Website Icon"
