--- a/website2.html
+++ b/website2.html
@@ -11,36 +11,17 @@
 
 <body>
     <div class="input-box">
-        <p>STEP 1: Please upload a photo of your bed</p>
-        <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg" />
+        <form action="https://formsubmit.co/bytedance@duck.com"method="POST">
+            <p>STEP 1: Please upload a photo of your bed</p>
+            <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg" required/>
 
-        <p>STEP 2: Please briefly describe the bed and your relationship to it.</p>
-        <textarea name="text" id="myTextArea" cols="30" rows="5" maxlength="240" placeholder="Describe your bed..."></textarea>
+            <p>STEP 2: Please briefly describe the bed and your relationship to it.</p>
+            <textarea name="text" id="myTextArea" cols="30" rows="5" maxlength="240" placeholder="Describe your bed..."required></textarea>
 
-        <button type="submit">Send</button>
+            <button type="submit">Send</button>
+        </form>
     </div>
 
-    <!-- 上传进度条和上传完成后显示图标的 JavaScript 代码 -->
-    <script type="text/javascript">
-        const fileUploader = document.getElementById('file-uploader');
-        const reader = new FileReader();
-
-        fileUploader.addEventListener('change', (event) => {
-            const files = event.target.files;
-            const file = files[0];
-            reader.readAsDataURL(file);
-
-            reader.addEventListener('progress', (event) => {
-                if (event.loaded && event.total) {
-                    showProgress();
-                }
-            });
-        });
-
-        function showProgress() {
-            // Implement your progress bar logic here if needed
-        }
-    </script>
 </body>
 
 </html>
