--- a/website2.html
+++ b/website2.html
@@ -14,10 +14,18 @@
         <form action="https://formsubmit.co/bytedance@duck.com"method="POST">
             <p>STEP 1: Please upload a photo of your bed</p>
             <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg" required/>
-
             <p>STEP 2: Please briefly describe the bed and your relationship to it.</p>
             <textarea name="text" id="myTextArea" cols="30" rows="5" maxlength="240" placeholder="Describe your bed..."required></textarea>
-
+            <input
+                type="hidden"
+                name="_captcha"
+                value="false"
+            >
+            <input
+                type="hidden"
+                name="_next"
+                value="https://jessejixin.github.io/website3.html"
+            >
             <button type="submit">Send</button>
         </form>
     </div>
