--- a/website2.html
+++ b/website2.html
@@ -13,7 +13,7 @@
     <div class="input-box">
         <form action="https://formsubmit.co/bytedance@duck.com"method="POST">
             <p>STEP 1: Please upload a photo of your bed</p>
-            <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg" required/>
+            <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg"/>
             <p>STEP 2: Please briefly describe the bed and your relationship to it.</p>
             <textarea name="text" id="myTextArea" cols="30" rows="5" maxlength="240" placeholder="Describe your bed..."required></textarea>
             <input
