--- a/website2.html
+++ b/website2.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="input-box">
-        <form action="https://formsubmit.co/bytedance@duck.com"method="POST">
+        <form action="https://formsubmit.co/bytedance@duck.com"method="POST" enctype="multipart/form-data">
             <p>STEP 1: Please upload a photo of your bed</p>
             <input type="file" id="file-uploader" name="attachment" accept="image/png, image/jpeg"/>
             <p>STEP 2: Please briefly describe the bed and your relationship to it.</p>
