--- a/archive.html
+++ b/archive.html
@@ -33,19 +33,19 @@
 
         <img
             class="Bed"
-            src="./BedImage/Bed1/Bed1Real.jpeg"
+            src="./BedImage/Bed1R.jpg"
             onmouseover="show1();"
             onmouseout="dis1();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed2/Bed2Real.jpeg"
+            src="./BedImage/Bed2R.JPG"
             onmouseover="show2();"
             onmouseout="dis2();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed3/Bed3Real.jpeg"
+            src="./BedImage/Bed3R.JPG"
             onmouseover="show3();"
             onmouseout="dis3();"
         />
@@ -91,19 +91,19 @@
 
         <img
             class="Bed"
-            src="./BedImage/Bed4/Bed4Real.jpeg"
+            src="./BedImage/Bed4R.jpg"
             onmouseover="show4();"
             onmouseout="dis4();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed5/Bed5Real.jpeg"
+            src="./BedImage/Bed5R.jpg"
             onmouseover="show5();"
             onmouseout="dis5();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed6/Bed6Real.jpeg"
+            src="./BedImage/Bed6R.JPG"
             onmouseover="show6();"
             onmouseout="dis6();"
         />
@@ -150,19 +150,19 @@
 
         <img
             class="Bed"
-            src="./BedImage/Bed7/Bed7Real.jpeg"
+            src="./BedImage/Bed7R.JPG"
             onmouseover="show7();"
             onmouseout="dis7();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed8/Bed8Real.jpeg"
+            src="./BedImage/Bed8R.JPG"
             onmouseover="show8();"
             onmouseout="dis8();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed9/Bed9Real.jpeg"
+            src="./BedImage/Bed9R.jpg"
             onmouseover="show9();"
             onmouseout="dis9();"
         />
@@ -208,19 +208,19 @@
 
         <img
             class="Bed"
-            src="./BedImage/Bed10/Bed10Real.jpeg"
+            src="./BedImage/Bed10R.jpg"
             onmouseover="show10();"
             onmouseout="dis10();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed11/Bed11Real.jpeg"
+            src="./BedImage/Bed11R.jpg"
             onmouseover="show11();"
             onmouseout="dis11();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed12/Bed12Real.jpeg"
+            src="./BedImage/Bed12.jpg"
             onmouseover="show12();"
             onmouseout="dis12();"
         />
