--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> Days of being cared for by a bed </title>
-    <link
-        href="index.css"
-        rel="stylesheet"
-    />
+    <title>Days of being cared for by a bed</title>
+    <link href="index.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -18,13 +15,27 @@
         <a href="about.html" class="about">About</a>
     </div>
 
+    <!-- 去掉原先背景图 -->
     <div class="box">
-        <div style="position:relative">
-            <img src="主页大图透明底.png" alt="Main Image" />
-            <p>
-                <input type="button" onclick='location.href=("website2.html")' value="Explore More" />
-            </p>
+        <div class="image-gallery">
+            <div class="image-column">
+                <img src="Image/image1.JPG" alt="Image 1" />
+                <img src="Image/image3.JPG" alt="Image 3" />
+                <img src="Image/image5.JPG" alt="Image 5" />
+                <img src="Image/image7.JPG" alt="Image 7" />
+                <img src="Image/image9.JPG" alt="Image 9" />
+            </div>
+            <div class="image-column">
+                <img src="Image/image2.JPG" alt="Image 2" />
+                <img src="Image/image4.jpg" alt="Image 4" />
+                <img src="Image/image6.jpg" alt="Image 6" />
+                <img src="Image/image8.jpg" alt="Image 8" />
+                <img src="Image/image10.jpg" alt="Image 10" />
+            </div>
         </div>
+        <p>
+            <input type="button" onclick='location.href=("website2.html")' value="Explore More" />
+        </p>
     </div>
 </body>
 
