--- a/archive.html
+++ b/archive.html
@@ -39,13 +39,13 @@
         />
         <img
             class="Bed"
-            src="./BedImage/Bed2R.JPG"
+            src="./BedImage/Bed2R.jpg"
             onmouseover="show2();"
             onmouseout="dis2();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed3R.JPG"
+            src="./BedImage/Bed3R.jpg"
             onmouseover="show3();"
             onmouseout="dis3();"
         />
@@ -103,7 +103,7 @@
         />
         <img
             class="Bed"
-            src="./BedImage/Bed6R.JPG"
+            src="./BedImage/Bed6R.jpg"
             onmouseover="show6();"
             onmouseout="dis6();"
         />
@@ -150,13 +150,13 @@
 
         <img
             class="Bed"
-            src="./BedImage/Bed7R.JPG"
+            src="./BedImage/Bed7R.jpg"
             onmouseover="show7();"
             onmouseout="dis7();"
         />
         <img
             class="Bed"
-            src="./BedImage/Bed8R.JPG"
+            src="./BedImage/Bed8R.jpg"
             onmouseover="show8();"
             onmouseout="dis8();"
         />
