--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <div class="box">
         <div class="image-gallery">
             <div class="image-column">
-                <img src="Image/image1.JPG" alt="Image 1" />
-                <img src="Image/image3.JPG" alt="Image 3" />
-                <img src="Image/image5.JPG" alt="Image 5" />
-                <img src="Image/image7.JPG" alt="Image 7" />
-                <img src="Image/image9.JPG" alt="Image 9" />
+                <img src="Image/image1.jpg" alt="Image 1" />
+                <img src="Image/image3.jpg" alt="Image 3" />
+                <img src="Image/image5.jpg" alt="Image 5" />
+                <img src="Image/image7.jpg" alt="Image 7" />
+                <img src="Image/image9.jpg" alt="Image 9" />
             </div>
             <div class="image-column">
-                <img src="Image/image2.JPG" alt="Image 2" />
+                <img src="Image/image2.jpg" alt="Image 2" />
                 <img src="Image/image4.jpg" alt="Image 4" />
                 <img src="Image/image6.jpg" alt="Image 6" />
                 <img src="Image/image8.jpg" alt="Image 8" />
