--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div id="content">
-        <img src="./Image/About1.jpeg">
+        <img src="./Image/about.jpg">
     </div>
 
     <div class="link">
