Added some icons.

--- a/about.html
+++ b/about.html
@@ -26,24 +26,23 @@
     </div>
 
     <div class="link">
-        <a href="mailto:">
+        <a href="mailto:x20030822@gmail.com">
             <img
-                src="./Image/Mail.jpg"
+                src="./Image/email.png"
                 alt="Mail Icon"
             >
         </a>
-
         </a>
-        <a href="https://www.instagram.com/">
+        <a href="https://www.instagram.com/xie_tianni">
             <img
-                src="./Image/Ins.jpg"
+                src="./Image/ig.png"
                 alt="Instagram Icon"
             >
         </a>
-        <a href="">
+        <a href="https://www.xiaohongshu.com/user/profile/60c2a970000000000100065f?xhsshare=CopyLink&appuid=5a31462ddb2e601d5b79dbfc&apptime=1722873867&share_id=8d9a1112af474fa4a84f6d7a16c83f7b">
             <img
-                src="./Image/Dog.jpg"
-                alt="Website Icon"
+                src="./Image/xhs.png"
+                alt="Xiaohongshu Icon"
             >
         </a>
     </div>
