Added Input Background.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <p>
-            <a href="website2.html">
+            <a href="submit.html">
                 <img src="Icons/joinus.png" alt="Join Us" class="button-image" />
             </a>
         </p>
