--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link
-        href="website5.css"
+        href="thanks.css"
         rel="stylesheet"
     />
 </head>
