--- a/drawingboard-master/index1.html
+++ b/drawingboard-master/index1.html
@@ -86,8 +86,9 @@
                     ></button>
 <form
     method="POST"
-    data-netlify="true"  <!-- Add this attribute for Netlify form handling -->
+    data-netlify="true"  
     enctype="multipart/form-data"
+    id="canvas"
 >
     <!-- Submit button -->
     <button
