--- a/drawingboard-master/index1.html
+++ b/drawingboard-master/index1.html
@@ -85,10 +85,12 @@
                         title="redo"
                     ></button>
 <form
+    name="canvas"
     method="POST"
     data-netlify="true"  
     enctype="multipart/form-data"
     id="canvas"
+    action="/thanks.html"
 >
     <!-- Submit button -->
     <button
@@ -126,11 +128,6 @@
         type="hidden"
         name="_captcha"
         value="false"
-    >
-    <input
-        type="hidden"
-        name="_next"
-        value="https://daysofbedcare.space/thanks.html"
     >
 </form>
   
