--- a/submit.html
+++ b/submit.html
@@ -24,7 +24,7 @@
             <div style="position:relative;">
                 <img src="Image/form.jpg" width="1080px"/>
                 <div class="textarea-container">
-                    <textarea id="myTextarea"></textarea>
+                    <textarea id="myTextarea" name="story"></textarea>
                     <img id="overlayImage" src="Image/textarea.jpg" alt="Input Box" />
             </div>
             <script src="script.js"></script>
