--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
         name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"
     >
-    <title> Days of being cared for by a bed </title>
+    <title>Days of Bed Care</title>
 
     <meta charset="utf-8" />
     <link
