--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Days of Bed Care</title>
+    <title>Days of Bed Care: Home</title>
     <link href="index.css" rel="stylesheet" />
 </head>
 
