--- a/archive.html
+++ b/archive.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8" />
     <link
-        href="archive.css"
+        href="archive2.css"
         rel="stylesheet"
     />
 </head>
@@ -22,328 +22,23 @@
         </div>
     </nav>
 
-    <!-- 1-3 -->
-    <div
-        class="Content"
-        style="position: relative;"
-    >
-
-        <img
-            class="Bed"
-            src="./BedImage/Bed1R.jpg"
-            onmouseover="show1();"
-            onmouseout="dis1();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed2R.jpg"
-            onmouseover="show2();"
-            onmouseout="dis2();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed3R.jpg"
-            onmouseover="show3();"
-            onmouseout="dis3();"
-        />
-
-        <div
-            class="hiddenInfoA"
-            id="hiddenInfo1"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed1/Bed1Paint.jpeg"
-            />
-            <span>Can we go back to how things were?</span>
+    <!-- Content with Bed images and their corresponding BedPaint images -->
+    <div class="Content">
+        <div class="image-container">
+            <img class="Bed" src="./BedImage/Bed1R.jpg" />
+            <img class="hiddenInfo" src="./BedImage/Bed1P.jpg" onclick="openPage('BedInfo/Bed1.html');" />
         </div>
-        <div
-            class="hiddenInfoB"
-            id="hiddenInfo2"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed2/Bed2Paint.jpeg"
-            />
-            <span>Can we go back to how things were?</span>
+        <div class="image-container">
+            <img class="Bed" src="./BedImage/Bed2R.jpg" />
+            <img class="hiddenInfo" src="./BedImage/Bed2P.jpg" />
         </div>
-        <div
-            class="hiddenInfoC"
-            id="hiddenInfo3"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed3/Bed3Paint.jpeg"
-            />
-            <span></span>
+        <div class="image-container">
+            <img class="Bed" src="./BedImage/Bed3R.jpg" />
+            <img class="hiddenInfo" src="./BedImage/Bed3P.jpg" />
         </div>
     </div>
-
-    <!-- 4-6 -->
-    <div
-        class="Content"
-        style="position: relative;"
-        width="100%"
-    >
-
-        <img
-            class="Bed"
-            src="./BedImage/Bed4R.jpg"
-            onmouseover="show4();"
-            onmouseout="dis4();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed5R.jpg"
-            onmouseover="show5();"
-            onmouseout="dis5();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed6R.jpg"
-            onmouseover="show6();"
-            onmouseout="dis6();"
-        />
-
-        <div
-            class="hiddenInfoA"
-            id="hiddenInfo4"
-        >
-        <img
-            class="BedPaint"
-            src="./BedImage/Bed4/Bed4Paint.jpeg"
-        />
-        <span></span>
-    </div>
-
-        <div
-            class="hiddenInfoB"
-            id="hiddenInfo5"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed5/Bed5Paint.jpeg"
-            />
-            <span></span>
-        </div>
-        <div
-            class="hiddenInfoC"
-            id="hiddenInfo6"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed6/Bed6Paint.jpeg"
-            />
-            <span></span>
-        </div>
-    </div>
-
-    <!-- 7-9 -->
-    <div
-        class="Content"
-        style="position: relative;"
-        width="100%"
-    >
-
-        <img
-            class="Bed"
-            src="./BedImage/Bed7R.jpg"
-            onmouseover="show7();"
-            onmouseout="dis7();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed8R.jpg"
-            onmouseover="show8();"
-            onmouseout="dis8();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed9R.jpg"
-            onmouseover="show9();"
-            onmouseout="dis9();"
-        />
-
-        <div
-            class="hiddenInfoA"
-            id="hiddenInfo7"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed7/Bed7Paint.jpeg"
-            />
-            <span>Happy new year and happy whole life :)</span>
-        </div>
-        <div
-            class="hiddenInfoB"
-            id="hiddenInfo8"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed8/Bed8Paint.jpeg"
-            />
-            <span>A Christmas wish for my best friend!</span>
-        </div>
-        <div
-            class="hiddenInfoC"
-            id="hiddenInfo9"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed9/Bed9Paint.jpeg"
-            />
-            <span>Love you ❤️ </span>
-        </div>
-    </div>
-
-    <!-- 10-12 -->
-    <div
-        class="Content"
-        style="position: relative;"
-        width="100%"
-    >
-
-        <img
-            class="Bed"
-            src="./BedImage/Bed10R.jpg"
-            onmouseover="show10();"
-            onmouseout="dis10();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed11R.jpg"
-            onmouseover="show11();"
-            onmouseout="dis11();"
-        />
-        <img
-            class="Bed"
-            src="./BedImage/Bed12.jpg"
-            onmouseover="show12();"
-            onmouseout="dis12();"
-        />
-
-        <div
-            class="hiddenInfoA"
-            id="hiddenInfo10"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed10/Bed10Paint.jpeg"
-            />
-            <span></span>
-        </div>
-        <div
-            class="hiddenInfoB"
-            id="hiddenInfo11"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed11/Bed11Paint.jpeg"
-            />
-            <span>You are cute!</span>
-        </div>
-        <div
-            class="hiddenInfoC"
-            id="hiddenInfo12"
-        >
-            <img
-                class="BedPaint"
-                src="./BedImage/Bed12/Bed12Paint.jpeg"
-            />
-            <span>Be a happy angel there!</span>
-        </div>
-    </div>
-</body>
-
-<script>
-    window.addEventListener('load', function() {
-        const bedElement = document.querySelector('.Bed');
-        const hiddenInfoElement = document.querySelector('.hiddenInfoA');
-        
-        function matchHeight() {
-            const bedHeight = bedElement.offsetHeight;
-            hiddenInfoElement.style.height = bedHeight + 'px';
+    <script>
+        function openPage(fileName) {
+            window.open(fileName, '_blank'); // Open image in a new tab
         }
-
-        // Match height on load
-        matchHeight();
-
-        // Match height on window resize
-        window.addEventListener('resize', matchHeight);
-    });
-</script>
-
-<script>
-    function show1() {
-        document.getElementById("hiddenInfo1").style.opacity = "0";
-    }
-    function dis1() {
-        document.getElementById("hiddenInfo1").style.opacity = "0";
-    }
-    function show2() {
-        document.getElementById("hiddenInfo2").style.opacity = "1";
-    }
-    function dis2() {
-        document.getElementById("hiddenInfo2").style.opacity = "0";
-    }
-    function show3() {
-        document.getElementById("hiddenInfo3").style.opacity = "1";
-    }
-    function dis3() {
-        document.getElementById("hiddenInfo3").style.opacity = "0";
-    }
-    function show4() {
-        document.getElementById("hiddenInfo4").style.opacity = "0";
-    }
-    function dis4() {
-        document.getElementById("hiddenInfo4").style.opacity = "0";
-    }
-    function show5() {
-        document.getElementById("hiddenInfo5").style.opacity = "1";
-    }
-    function dis5() {
-        document.getElementById("hiddenInfo5").style.opacity = "0";
-    }
-    function show6() {
-        document.getElementById("hiddenInfo6").style.opacity = "1";
-    }
-    function dis6() {
-        document.getElementById("hiddenInfo6").style.opacity = "0";
-    }
-    function show7() {
-        document.getElementById("hiddenInfo7").style.opacity = "0";
-    }
-    function dis7() {
-        document.getElementById("hiddenInfo7").style.opacity = "0";
-    }
-    function show8() {
-        document.getElementById("hiddenInfo8").style.opacity = "1";
-    }
-    function dis8() {
-        document.getElementById("hiddenInfo8").style.opacity = "0";
-    }
-    function show9() {
-        document.getElementById("hiddenInfo9").style.opacity = "1";
-    }
-    function dis9() {
-        document.getElementById("hiddenInfo9").style.opacity = "0";
-    }
-    function show10() {
-        document.getElementById("hiddenInfo10").style.opacity = "0";
-    }
-    function dis10() {
-        document.getElementById("hiddenInfo10").style.opacity = "0";
-    }
-    function show11() {
-        document.getElementById("hiddenInfo11").style.opacity = "1";
-    }
-    function dis11() {
-        document.getElementById("hiddenInfo11").style.opacity = "0";
-    }
-    function show12() {
-        document.getElementById("hiddenInfo12").style.opacity = "1";
-    }
-    function dis12() {
-        document.getElementById("hiddenInfo12").style.opacity = "0";
-    }
-</script>
+    </script>
