--- a/archive.html
+++ b/archive.html
@@ -61,16 +61,14 @@
                             <button type="submit"class="submit-button"></button>
                         </div>
                     </form>
-                    <!-- Like button and count -->
+                    <!-- Like button and count
                     <div class="like-container">
                         <form name="like-form" method="POST" data-netlify="true", id="like-bed1">
                             <input type="hidden" name="like" value="1" />
-                            <button type="submit" class="like-button">
-                               
-                            </button>
+                            <button type="submit" class="like-button"></button>
                         </form>
                         <span id="like-count">0</span> Likes
-                    </div>
+                    </div> -->
                     <p class="result"></p>
                 </div>
         </div>
