--- a/archive.html
+++ b/archive.html
@@ -61,6 +61,10 @@
                             <button type="submit"class="submit-button"></button>
                         </div>
                     </form>
+                    <div class="like-container">
+                        <button onclick="handleLike('item1')"class="like-button"></button>
+                        <span id="like-count">7</span> Likes
+                    </div> 
                     <!-- Like button and count
                     <div class="like-container">
                         <form name="like-form" method="POST" data-netlify="true", id="like-bed1">
@@ -347,9 +351,15 @@
         function showImage(imageId) {
             document.getElementById(imageId).style.display = 'block';
         }
-        function toggleLike() {
-            var likeIcon = document.getElementById('like-icon');
-            likeIcon.style.display = likeIcon.style.display === 'none' ? 'inline' : 'none';
+        async function handleLike(itemId) {
+            const response = await fetch('/.netlify/functions/like', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ item_id: itemId }),
+            });
+
+            const data = await response.json();
+            document.getElementById('like-count').textContent = `${data.likes} Likes`;
         }
 
         function openModal(id) {
